# qb-bert

./: .gitignore  environment.yaml
src/: .gitignore  README.md  bert_model.jsonnet  classic_model.jsonnet  dan_model.jsonnet  fix_logs.py  hyper.py  model.jsonnet  pylintrc  pyproject.toml  qb_to_lm.py  rnn_model.jsonnet  setup.py  slurm-919429.out  slurm-allennlp.sh  slurm-scav-allennlp.sh  train.sh
src/config/: bert.toml  best-bert-lm.toml  best-bert.toml  best-dan-wiki.toml  best-dan.toml  best-rnn-wiki.toml  best-rnn.toml  dan.toml  hyper-bert.toml  rnn.toml
src/qb/: callbacks.py  config.py  constants.py  data.py  evaluate.py  hyper.py  main.py  model.py  predictor.py  qanta.py  util.py
src/qb/tests/: test_data.py
